--- a/index.html
+++ b/index.html
@@ -11,25 +11,33 @@
       background-color: #f9f9f9;
     }
 
-    header {
-      padding: 0;
-    }
+ <header class="banner-wrapper">
+  <img src="https://res.cloudinary.com/dh1qqui2h/image/upload/v1752830827/Logo_original_ij5vub.png" alt="Logo Escencia" class="banner-logo">
+</header>
 
-    .banner-image {
-      width: 100%;
-      height: 40vh;
-      min-height: 200px;
-      background-image: url('https://res.cloudinary.com/dh1qqui2h/image/upload/v1752831494/Logo_original_m0nqzp.png');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-    }
+<style>
+  .banner-wrapper {
+    width: 100%;
+    padding: 30px 0;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-    @media (max-width: 600px) {
-      .banner-image {
-        height: 30vh;
-      }
+  .banner-logo {
+    max-width: 90%;
+    height: auto;
+    max-height: 200px;
+  }
+
+  @media (max-width: 600px) {
+    .banner-logo {
+      max-height: 140px;
     }
+  }
+</style>
+
 
     .container {
       padding: 40px 20px;
@@ -256,10 +264,10 @@
     }
 
     function sendWhatsApp() {
-      if (cart.length === 0) return alert("El carrito está vacío.");
+      if (cart.length === 0) return alert("El carrito estÃ¡ vacÃ­o.");
       let message = "Hola! Quiero confirmar el siguiente pedido:\n\n";
       cart.forEach(p => {
-        message += `• ${p.name} - $${p.price}\n`;
+        message += `â€¢ ${p.name} - $${p.price}\n`;
       });
       const total = cart.reduce((sum, item) => sum + item.price, 0);
       message += `\nTotal: $${total}`;
