--- a/index.html
+++ b/index.html
@@ -11,28 +11,35 @@
       background-color: #f9f9f9;
     }
 
-header {
+    header {
       padding: 0;
     }
 
     .banner-image {
       width: 100%;
-      height: 40vh;
-      min-height: 200px;
+      height: 50vh; /* Asegura una altura adecuada */
+      min-height: 300px; /* Altura mínima para pantallas pequeñas */
       background-image: url('https://res.cloudinary.com/dh1qqui2h/image/upload/v1752831494/Logo_original_m0nqzp.png');
-      background-size: cover;
+      background-size: contain; /* Asegura que la imagen no se recorte */
       background-position: center;
       background-repeat: no-repeat;
     }
 
-    @media (max-width: 600px) {
+    @media (max-width: 768px) {
       .banner-image {
-        height: 30vh;
+        height: 40vh; /* Ajusta la altura en dispositivos más pequeños */
+        min-height: 200px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .banner-image {
+        height: 30vh; /* Altura reducida para pantallas muy pequeñas */
       }
     }
 
     .container {
-      padding: 40px 20px;
+      padding: 20px;
       display: flex;
       flex-wrap: wrap;
       gap: 20px;
@@ -44,9 +51,22 @@ header {
       border: 1px solid #ddd;
       border-radius: 8px;
       padding: 20px;
-      width: 250px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      width: 100%; /* Ocupa el ancho completo en pantallas pequeñas */
+      max-width: 250px; /* Tamaño máximo en pantallas grandes */
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
       text-align: center;
+    }
+
+    @media (min-width: 480px) {
+      .product {
+        flex: 0 1 calc(50% - 40px); /* Dos columnas en pantallas medianas */
+      }
+    }
+
+    @media (min-width: 768px) {
+      .product {
+        flex: 0 1 calc(33.33% - 40px); /* Tres columnas en pantallas grandes */
+      }
     }
 
     .product img {
@@ -57,10 +77,12 @@ header {
 
     .product h3 {
       margin: 10px 0 5px;
+      font-size: 18px;
     }
 
     .product p {
       margin: 5px 0;
+      font-size: 16px;
     }
 
     .product button {
@@ -81,7 +103,7 @@ header {
       background-color: #2d3975;
       padding: 15px 20px;
       border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       display: flex;
       align-items: center;
       gap: 15px;
@@ -110,7 +132,7 @@ header {
       left: 0;
       width: 100vw;
       height: 100vh;
-      background-color: rgba(0,0,0,0.4);
+      background-color: rgba(0, 0, 0, 0.4);
       display: none;
       justify-content: center;
       align-items: center;
@@ -125,7 +147,7 @@ header {
       max-width: 500px;
       max-height: 80vh;
       overflow-y: auto;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     }
 
     .cart-item {
