--- a/index.html
+++ b/index.html
@@ -11,35 +11,28 @@
       background-color: #f9f9f9;
     }
 
-    header {
+header {
       padding: 0;
     }
 
     .banner-image {
       width: 100%;
-      height: 50vh; /* Asegura una altura adecuada */
-      min-height: 300px; /* Altura mínima para pantallas pequeñas */
+      height: 40vh;
+      min-height: 200px;
       background-image: url('https://res.cloudinary.com/dh1qqui2h/image/upload/v1752831494/Logo_original_m0nqzp.png');
-      background-size: contain; /* Asegura que la imagen no se recorte */
+      background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: 600px) {
       .banner-image {
-        height: 40vh; /* Ajusta la altura en dispositivos más pequeños */
-        min-height: 200px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .banner-image {
-        height: 30vh; /* Altura reducida para pantallas muy pequeñas */
+        height: 30vh;
       }
     }
 
     .container {
-      padding: 20px;
+      padding: 40px 20px;
       display: flex;
       flex-wrap: wrap;
       gap: 20px;
@@ -51,22 +44,9 @@
       border: 1px solid #ddd;
       border-radius: 8px;
       padding: 20px;
-      width: 100%; /* Ocupa el ancho completo en pantallas pequeñas */
-      max-width: 250px; /* Tamaño máximo en pantallas grandes */
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+      width: 250px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
       text-align: center;
-    }
-
-    @media (min-width: 480px) {
-      .product {
-        flex: 0 1 calc(50% - 40px); /* Dos columnas en pantallas medianas */
-      }
-    }
-
-    @media (min-width: 768px) {
-      .product {
-        flex: 0 1 calc(33.33% - 40px); /* Tres columnas en pantallas grandes */
-      }
     }
 
     .product img {
@@ -77,12 +57,10 @@
 
     .product h3 {
       margin: 10px 0 5px;
-      font-size: 18px;
     }
 
     .product p {
       margin: 5px 0;
-      font-size: 16px;
     }
 
     .product button {
@@ -103,7 +81,7 @@
       background-color: #2d3975;
       padding: 15px 20px;
       border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
       display: flex;
       align-items: center;
       gap: 15px;
@@ -132,7 +110,7 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      background-color: rgba(0, 0, 0, 0.4);
+      background-color: rgba(0,0,0,0.4);
       display: none;
       justify-content: center;
       align-items: center;
@@ -147,7 +125,7 @@
       max-width: 500px;
       max-height: 80vh;
       overflow-y: auto;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     }
 
     .cart-item {
