--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
       height: 50vh; /* Asegura una altura adecuada */
       min-height: 300px; /* Altura mínima para pantallas pequeñas */
       background-image: url('https://res.cloudinary.com/dh1qqui2h/image/upload/v1752831494/Logo_original_m0nqzp.png');
-      background-size: contain; /* Asegura que la imagen no se recorte */
-      background-position: center;
+      background-size: cover; /* Asegura que la imagen no se recorte */
+      background-position: relative;
       background-repeat: no-repeat;
     }
 
     @media (max-width: 768px) {
       .banner-image {
         height: 40vh; /* Ajusta la altura en dispositivos más pequeños */
-        min-height: 200px;
+        min-height: 230px;
       }
     }
 
@@ -40,7 +40,7 @@
 
     .container {
       padding: 20px;
-      display: grid;
+      display: flex;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Hacer los productos responsivos */
       gap: 20px; /* Espaciado entre los productos */
       justify-items: center; /* Centra los productos */
