--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
       padding: 0;
     }
 
-    .banner-image {
-      width: 100%;
-      height: 50vh; /* Asegura una altura adecuada */
-      min-height: 300px; /* Altura mínima para pantallas pequeñas */
-      background-image: url('https://res.cloudinary.com/dh1qqui2h/image/upload/v1752831494/Logo_original_m0nqzp.png');
-      background-size: contain; /* Asegura que la imagen no se recorte */
-      background-position: center;
-      background-repeat: no-repeat;
+header {
+  background-image: url('https://res.cloudinary.com/dh1qqui2h/image/upload/v1752835605/ChatGPT_Image_18_jul_2025_07_45_52_dvy5zr.png'); /* o el link donde la subas */
+  background-size: cover;
+  background-position: center;
+  height: 220px;
+}
+
     }
 
     @media (max-width: 768px) {
