--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ header {
   background-image: url('https://res.cloudinary.com/dh1qqui2h/image/upload/v1752835605/ChatGPT_Image_18_jul_2025_07_45_52_dvy5zr.png'); /* o el link donde la subas */
   background-size: cover;
   background-position: center;
-  height: 220px;
+  height: 300px;
+  width: 100%;
 }
 
     }
