--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 <body>
 
   <header>
-    <img src="https://cdn.openai.com/chat-assets/0162368f-42fc-45a6-8e35-03d4ceecb432/banner-escencia.jpg" alt="Escencia">
+    <img src="https://res.cloudinary.com/dh1qqui2h/image/upload/v1752835605/ChatGPT_Image_18_jul_2025_07_45_52_dvy5zr.png">
   </header>
 
   <main class="container" id="productList">
