--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
 
   <script>
     const products = [
-      { id: 1, name: "Bolso Deportivo Escence", price: 50000, image:"https://media.istockphoto.com/id/1313476555/es/foto/bolsa-deportiva-aislada-sobre-el-fondo-blanco.jpg" },
-      { id: 2, name: "Mochila Escence", price: 35000, image: "https://media.istockphoto.com/id/1362790255/es/foto/mochila-azul-oscuro-para-hombre-fabricada-en-textil-un-fondo-blanco.jpg" },
-      { id: 3, name: "Mochila Escence Pro", price: 65000, image: "https://media.istockphoto.com/id/167759603/es/foto/mochila.jpg" }
+      { id: 1, name: "Bolso Deportivo Escence", price: 50000, image:"https://res.cloudinary.com/dh1qqui2h/image/upload/v1752837295/bolso_1_keowvq.webp" },
+      { id: 2, name: "Mochila Maternal Escence", price: 35000, image: "https://res.cloudinary.com/dh1qqui2h/image/upload/v1752837432/cuna_howlgp.webp" },
+      { id: 3, name: "Morral Escence Pro", price: 65000, image: "https://res.cloudinary.com/dh1qqui2h/image/upload/v1752837584/morral_sbl8yt.webp" }
     ];
 
     const cart = [];
