Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -198,7 +198,15 @@
 
 <section id="quienes" style="text-align: center;">
   <h2>¿Quiénes somos?</h2>
-  <p>Somos Escencia: una marca con alma, nacida del esfuerzo de dos hermanas que decidieron transformar su historia en inspiración y estilo.</p>
+  <p>ESCENCIA nació de dos hermanas unidas por una historia difícil, pero aún más por la fuerza de no rendirse. Crecimos en una infancia dura, donde cada paso fue una batalla… pero juntas aprendimos a transformar el dolor en impulso, y la lucha en creación.
+
+Creamos esta marca como reflejo de lo que somos: mujeres que no se olvidan de su origen, que caminan con el corazón en alto, y que llevan consigo todo lo que realmente importa.
+
+Cada bolso, cada mochila que diseñamos, tiene algo de nosotras. No son solo productos: son fragmentos de un camino recorrido con coraje, amor y propósito.
+
+Escencia es eso: lo esencial, lo verdadero, lo que queda cuando todo lo demás se cae.
+
+Gracias por estar acá. Gracias por llevar con vos un pedacito de nuestra historia.</p>
 </section>
 
 <section id="productos">
