Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
   <img src="https://res.cloudinary.com/dh1qqui2h/image/upload/v1752831494/Logo_original_m0nqzp.png" alt="Escencia">
 </header>
 
-<nav>
-  <a href="#quienes">¿Quiénes somos?</a>
-  <a href="#productos">Productos</a>
-  <a href="#contacto">Contacto</a>
+<nav style="font-size:20px; display:flex; justify-content:center; gap:20px; background-color:#eee; padding:15px;">
+  <a href="#quienes" style="color:#333; text-decoration:none;">¿Quiénes somos?</a>
+  <a href="#productos" style="color:#333; text-decoration:none;">Productos</a>
+  <a href="#contacto" style="color:#333; text-decoration:none;">Contacto</a>
 </nav>
 
 <section id="quienes" style="text-align: center;">
