Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@ Gracias por estar acá. Gracias por llevar con vos un pedacito de nuestra histor
   <main class="container" id="productList"></main>
 </section>
 
-<section id="contacto" style="text-align: center;">
-  <h2>Contacto</h2>
-  <p>📱 WhatsApp: <a href="https://wa.me/5493541529201" target="_blank">+54 9 3541 529201</a></p>
-  <p>📧 Email: escencia@tienda.com</p>
-  <p>📍 Cosquín, Córdoba, Argentina</p>
+<section id="contacto" style="text-align: center; font-size:14px; padding:20px 10px;">
+  <h2 style="font-size:18px; margin-bottom:10px;">Contacto</h2>
+  <p style="margin:5px 0;">📱 WhatsApp: <a href="https://wa.me/5493541529201" target="_blank" style="color:#007bff; text-decoration:none;">+54 9 3541 529201</a></p>
+  <p style="margin:5px 0;">📧 Email: <span style="color:#333;">escencia@tienda.com</span></p>
+  <p style="margin:5px 0;">📍 Cosquín, Córdoba, Argentina</p>
 </section>
 
 <div class="cart-float" id="floatingCart">
