Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -75,15 +75,16 @@
     }
 
     .product button {
-      margin-top: 10px;
-      padding: 10px 15px;
-      background-color: #28a745;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-weight: bold;
-    }
+  margin-top: 10px;
+  padding: 15px 25px; /* Más espacio interno */
+  background-color: #28a745;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 18px; /* Texto más grande */
+}
 
     .cart-float {
       position: fixed;
